--- a/WebAPI/package.json
+++ b/WebAPI/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "~4.16.0",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.4.7"
+    "mongoose": "^5.4.7",
+    "node-iplocate": "^1.0.1"
   }
 }
